# InstaReplayPi

./: .gitignore  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md
.github/workflows/: acceptance.yml  ci.yml  release.yml
assets/touch/: index.html
config/: default.toml
crates/replay-core/: Cargo.toml
crates/replay-core/src/: buffer.rs  config.rs  fsm.rs  lib.rs  types.rs
crates/replay-engine/: Cargo.toml
crates/replay-engine/src/: capture_select.rs  chunk_index_actor.rs  chunk_registry.rs  control_api.rs  controller.rs  device_monitor.rs  device_watch.rs  devices.rs  displays.rs  format_probe.rs  gpio.rs  hotkeys.rs  http.rs  http_api.rs  lib.rs  logging.rs  main.rs  program_output.rs  runtime.rs  singleton.rs  storage_monitor.rs  video_stats.rs
crates/replay-engine/src/pipeline/: capture.rs  capture_source.rs  mod.rs  program_sink.rs  replay.rs
crates/replay-engine/src/ui/: gates.rs  mod.rs  operator_gl.rs  operator_shell.rs  program_window.rs  runtime.rs  setup_panel.rs
crates/replay-engine/tests/: buffer_acceptance.rs  fsm_integration.rs  headless_flow.rs  http_api.rs  mark_parity.rs  replay_guard.rs  replay_mode.rs
docs/: ARCHITECTURE.md  CONFIG.md  GITHUB_PI.md  HARDWARE_ACCEPTANCE.md  MVP_CHECKLIST.md  OPERATOR.md  PACKAGING.md  PI_DEPLOYMENT.md  PI_ONLY.md  PRODUCTION_STATUS.md  RELEASE.md
docs/acceptance/: README.md  RESULTS-pi.md  RESULTS.template.md
docs/archive/: QUICKSTART-cross-platform.md  RESULTS-linux.md  RESULTS-macos-automated.md  RESULTS-macos.md  RESULTS-windows.md
packaging/lib/: gstreamer-env.sh
packaging/linux/: README.md  instant-replay-launch.sh  instant-replay.desktop  replay-engine.default
packaging/pi/: instant-replay.desktop
scripts/: doctor-pi.sh  enable-appliance-autostart.sh  finalize.sh  hardware_signoff.sh  install-deps-raspberry-pi.sh  install-from-github.sh  install-instant-replay.sh  install-on-pi.sh  mvp_accept-full.sh  mvp_accept.sh  package-pi.sh  soak_test.sh  start-instant-replay-ui.sh  sync-version.sh  uninstall-instant-replay.sh  verify-package.sh
scripts/lib/: version.sh
systemd/: instant-replay-kiosk.service  replay-engine.service
systemd/replay-engine.service.d/: 10-user.conf.example
