[workspace]
resolver = "2"
members = [
    "crates/replay-core",
    "crates/replay-engine",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Instant Replay Team"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
